apps/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrms-frontend
  namespace: hrms
  labels:
    app: hrms-frontend
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hrms-frontend
  template:
    metadata:
      labels:
        app: hrms-frontend
        tier: frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 101
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: frontend
          image: nginx:1.28-alpine
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: html-config
              mountPath: /usr/share/nginx/html
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
      volumes:
        - name: html-config
          configMap:
            name: hrms-frontend-html
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
