apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hrms-frontend
  namespace: hrms
spec:
  selector:
    app: hrms-frontend
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
